--- a/website/apps/alibrary/templates/alibrary/playlist_edit.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_edit.html
@@ -68,6 +68,16 @@
         </script>
     {% endaddtoblock %}
 
+    {% addtoblock "css" %}
+        <style>
+            #sm2-container {
+                position: fixed;
+                width: 1px;
+                height: 1px;
+             }
+        </style>
+    {% endaddtoblock %}
+
     <div id="heading">
         {% include "skeleton/heading.html" %}
     </div>
