--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -13850,6 +13850,21 @@ body.loading-playlist {
   border-top: 4px solid #d1ffc0;
 }
 
+/* line 67, ../sass/site/_style.sass */
+.navleft li a {
+  text-transform: uppercase;
+}
+
+/* line 69, ../sass/site/_style.sass */
+.subnav li a {
+  text-transform: uppercase;
+}
+
+/* line 71, ../sass/site/_style.sass */
+.item_menu li a {
+  text-transform: uppercase;
+}
+
 /* line 3, ../sass/apps/_arating.sass */
 ul.arating {
   *zoom: 1;
