--- a/website/site-static/sass/site/_style.sass
+++ b/website/site-static/sass/site/_style.sass
@@ -63,6 +63,11 @@ body.loading-playlist
         border-top: 4px solid $successBorder
 
 
-// sidebar hack
-.span3.sidebar
-  //margin-top: 60px
+// navigation typo hack
+.navleft li a
+  text-transform: uppercase
+.subnav li a
+  text-transform: uppercase
+.item_menu li a
+  text-transform: uppercase
+
