--- a/website/site-static/sass/site/_variables.sass
+++ b/website/site-static/sass/site/_variables.sass
@@ -13,6 +13,9 @@ $main-link-color: $main-b
 $main-inverse-color: #FFFFFF
 $main-content-background-color: #F5F5F5
 
+$selection-bg-color: #EEE6FF
+$active-bg-color: #E4FFE4
+
 
 // dimensions
 $width-maincontent: 1115px
