--- a/website/site-static/sass/element/_sidebar.sass
+++ b/website/site-static/sass/element/_sidebar.sass
@@ -6,12 +6,14 @@
 .sidebar div.menu-context
   .action-group
     ul
+      margin-bottom: 25px
       border-top: 1px solid #AAAAAA
       li
         border-bottom: 1px solid #CCCCCC
         a
           display: block
-          padding: 2px 0
+          //padding: 2px 0
+          padding: 3px 0 4px
           i
             padding: 3px 0 3px 5px
             width: 20px
