--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -120,6 +120,9 @@ section.comments.disqus
   &.emissions
     margin-top: 15px
 
+  &.soundcloud
+    margin-top: 15px
+
   &.following
     margin-top: 15px
     // TODO: maybe move to other place later on
