--- a/website/site-static/sass/element/_listview.sass
+++ b/website/site-static/sass/element/_listview.sass
@@ -660,9 +660,12 @@
             margin: 2px 2px 0 0
             padding: 0 4px
             line-height: 14px
-            background: white
-            color: #333
-            border: 1px solid #dfdfdf
+            //background: white
+            //color: #333
+            //border: 1px solid #dfdfdf
+            background: #333
+            color: white
+            border: 1px solid #343434
             float: right
             text-transform: uppercase
             &.active
@@ -702,9 +705,13 @@
             margin: 2px 2px 0 0
             padding: 0 4px
             line-height: 14px
-            background: white
-            color: #333
-            border: 1px solid #dfdfdf
+            //background: white
+            //color: #333
+            //border: 1px solid #dfdfdf
+            background: #333
+            color: white
+            border: 1px solid #343434
+
             float: right
             text-transform: uppercase
             &.active
