--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -100,7 +100,7 @@
             <div class="container main">
 
 
-                <header class="subhead" id="overview">
+                <header class="subhead">
                     <div class="row">
 
 
