--- a/website/apps/profiles/templates/profiles/profile_form.html
+++ b/website/apps/profiles/templates/profiles/profile_form.html
@@ -9,7 +9,7 @@
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}ac_tagging/js/jquery.tag-it.js"></script>{% endaddtoblock %}
 <!-- heading / icon (large one) -->
 <div id="heading">
-	{% with page_title="Profile" %}
+	{% with page_title="My Profile" %}
 	{% include "skeleton/heading.html" %}
 	{% endwith %}
 </div>
