--- a/website/apps/profiles/templates/profiles/invitation_list.html
+++ b/website/apps/profiles/templates/profiles/invitation_list.html
@@ -8,7 +8,9 @@
 
 <!-- heading / icon (large one) -->
 <div id="heading">
+	{% with page_title="My Invitations" %}
 	{% include "skeleton/heading.html" %}
+	{% endwith %}
 </div>
 <!-- heading / icon (large one) -->
 {% endblock %}
