--- a/website/apps/aplayer/templates/aplayer/popup.html
+++ b/website/apps/aplayer/templates/aplayer/popup.html
@@ -118,7 +118,7 @@
 
     </div>
 
-    <footer class="footer">
+    <footer class="footer" style="position: fixed; bottom: 0; width: 100%;">
         <div class="__container">
 
             <!--
