--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -123,6 +123,9 @@ section.comments.disqus
   &.soundcloud
     margin-top: 15px
 
+  &.distribution
+    margin-top: 15px
+
   &.following
     margin-top: 15px
     // TODO: maybe move to other place later on
