--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -3471,7 +3471,7 @@ div.navbar .container .nav-profile .messages span.icon-label {
 /* ---------- subnav ---------- */
 /* line 120, ../sass/element/_toolbar.sass */
 .subnav {
-  padding: 8px 0px 0px 112px;
+  padding: 8px 0px 0px 154px;
 }
 /* line 124, ../sass/element/_toolbar.sass */
 .subnav li {
@@ -11517,218 +11517,218 @@ i.ajax-loader.c3CA3B9 {
   background: #efefef;
 }
 
-/* line 66, ../sass/apps/_importer.sass */
+/* line 63, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item {
   background: #fafafa;
   margin-bottom: 15px;
 }
-/* line 72, ../sass/apps/_importer.sass */
+/* line 69, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item .icon-holder {
   padding-top: 12px;
 }
-/* line 75, ../sass/apps/_importer.sass */
+/* line 72, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item .icon-holder i {
   font-size: 30px;
   color: green;
 }
-/* line 80, ../sass/apps/_importer.sass */
+/* line 77, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.waiting {
   opacity: 0.5;
   cursor: wait;
 }
-/* line 86, ../sass/apps/_importer.sass */
+/* line 83, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.init {
   opacity: 0.5;
   cursor: wait;
 }
-/* line 89, ../sass/apps/_importer.sass */
+/* line 86, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.init .icon-blank:before {
   content: "\f017";
 }
-/* line 97, ../sass/apps/_importer.sass */
+/* line 94, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.info {
   background-color: #ddffd9;
   color: #00bb00;
 }
-/* line 102, ../sass/apps/_importer.sass */
+/* line 99, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.warning h3 {
   background-color: #fcf8e3;
 }
-/* line 106, ../sass/apps/_importer.sass */
+/* line 103, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.error {
   background-color: #ffeed4;
   color: #ff743e;
 }
-/* line 110, ../sass/apps/_importer.sass */
+/* line 107, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.success {
   background-color: #ddffd9;
   color: #00bb00;
 }
-/* line 117, ../sass/apps/_importer.sass */
+/* line 114, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.ready .icon-blank:before {
   content: "\f096";
 }
-/* line 123, ../sass/apps/_importer.sass */
+/* line 120, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.working .icon-blank:before {
   content: "\f021";
 }
-/* line 128, ../sass/apps/_importer.sass */
+/* line 125, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.working div.result-set {
   display: block;
 }
-/* line 133, ../sass/apps/_importer.sass */
+/* line 130, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.working .progress {
   height: 5px;
   background: none;
   box-shadow: none;
 }
-/* line 138, ../sass/apps/_importer.sass */
+/* line 135, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.working .progress > .bar {
   height: 4px;
   background: #00bb00;
 }
-/* line 143, ../sass/apps/_importer.sass */
+/* line 140, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.duplicate {
   background-color: #fffeac;
   color: #5a5a5a;
 }
-/* line 146, ../sass/apps/_importer.sass */
+/* line 143, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.duplicate .icon-blank:before {
   content: "\f0c5";
 }
-/* line 149, ../sass/apps/_importer.sass */
+/* line 146, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.duplicate div.status-imported {
   display: block;
 }
-/* line 151, ../sass/apps/_importer.sass */
+/* line 148, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.duplicate div.status-duplicate {
   display: block;
 }
-/* line 158, ../sass/apps/_importer.sass */
+/* line 155, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.done {
   background-color: #ddffd9;
   color: #5a5a5a;
 }
-/* line 161, ../sass/apps/_importer.sass */
+/* line 158, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.done .icon-blank:before {
   content: "\f046";
 }
-/* line 164, ../sass/apps/_importer.sass */
+/* line 161, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.done div.status-imported {
   display: block;
 }
-/* line 168, ../sass/apps/_importer.sass */
+/* line 165, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.queued {
   background-color: #d8f9ff;
   color: #5a5a5a;
 }
-/* line 171, ../sass/apps/_importer.sass */
+/* line 168, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.queued div.status-queue {
   display: block;
 }
-/* line 179, ../sass/apps/_importer.sass */
+/* line 176, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.status-imported .information {
   min-height: 80px;
 }
-/* line 181, ../sass/apps/_importer.sass */
+/* line 178, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.status-imported .image img {
   margin-right: 10px;
   width: 70px;
   height: 70px;
 }
-/* line 187, ../sass/apps/_importer.sass */
+/* line 184, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.status-queue .information {
   min-height: 80px;
 }
-/* line 189, ../sass/apps/_importer.sass */
+/* line 186, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.status-queue .image img {
   margin-right: 10px;
   width: 70px;
   height: 70px;
 }
-/* line 195, ../sass/apps/_importer.sass */
+/* line 192, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item h3 {
   padding: 5px;
   font-size: 12px;
 }
-/* line 198, ../sass/apps/_importer.sass */
+/* line 195, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item h3 small {
   font-size: 10px;
 }
-/* line 204, ../sass/apps/_importer.sass */
+/* line 201, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set {
   padding: 5px 0;
   border-bottom: 1px solid #eeeeee;
 }
-/* line 208, ../sass/apps/_importer.sass */
+/* line 205, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set img {
   margin-right: 4px;
   width: 66px;
   height: 66px;
 }
-/* line 213, ../sass/apps/_importer.sass */
+/* line 210, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.provider-tag {
   font-size: 11px !important;
 }
-/* line 215, ../sass/apps/_importer.sass */
+/* line 212, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.provider-tag input[type='checkbox'] {
   display: none;
 }
-/* line 218, ../sass/apps/_importer.sass */
+/* line 215, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set .subset {
   display: block;
 }
-/* line 221, ../sass/apps/_importer.sass */
+/* line 218, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.hover {
   background-color: #fdfffd;
   cursor: pointer;
 }
-/* line 225, ../sass/apps/_importer.sass */
+/* line 222, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.choosen {
   background-color: #ddffd9;
 }
-/* line 227, ../sass/apps/_importer.sass */
+/* line 224, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.choosen .subset {
   display: block;
 }
-/* line 230, ../sass/apps/_importer.sass */
+/* line 227, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.selected {
   background-color: #f4fff3;
 }
-/* line 232, ../sass/apps/_importer.sass */
+/* line 229, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.selected .subset {
   display: block;
 }
-/* line 235, ../sass/apps/_importer.sass */
+/* line 232, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set ul {
   margin: 0;
 }
-/* line 238, ../sass/apps/_importer.sass */
+/* line 235, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set ul > li.small {
   font-size: 11px;
 }
-/* line 240, ../sass/apps/_importer.sass */
+/* line 237, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set ul > li.key {
   font-weight: bold;
   padding: 0 5px 0 0;
   width: 50px;
 }
-/* line 254, ../sass/apps/_importer.sass */
+/* line 251, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .missing input {
   background-color: #fcf8e3;
 }
-/* line 257, ../sass/apps/_importer.sass */
+/* line 254, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .base {
   padding-top: 0 !important;
 }
-/* line 259, ../sass/apps/_importer.sass */
+/* line 256, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .ac-result {
   position: absolute;
   z-index: 1000;
   background: white;
   width: 416px;
 }
-/* line 265, ../sass/apps/_importer.sass */
+/* line 262, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .ac-result .listing .item {
   margin-bottom: 0;
   padding: 4px;
@@ -11737,113 +11737,115 @@ section.importer-importfiles .listing .item form.form-result .ac-result .listing
   background: #333333;
   color: white;
 }
-/* line 272, ../sass/apps/_importer.sass */
+/* line 269, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .ac-result .listing .item img {
   width: 63px;
   height: 63px;
 }
-/* line 275, ../sass/apps/_importer.sass */
+/* line 272, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .ac-result .listing .item.hover {
   background-color: #ddffd9;
   color: black;
 }
-/* line 283, ../sass/apps/_importer.sass */
+/* line 280, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-actions {
   padding: 5px 20px 5px 10px;
 }
-/* line 286, ../sass/apps/_importer.sass */
+/* line 283, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-actions .base {
   padding-top: 10px;
 }
-/* line 288, ../sass/apps/_importer.sass */
+/* line 285, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-actions .advanced-fields {
   display: none;
 }
-/* line 294, ../sass/apps/_importer.sass */
+/* line 291, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .form-horizontal .control-group {
   margin-bottom: 0;
 }
-/* line 296, ../sass/apps/_importer.sass */
+/* line 293, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .form-horizontal .input-minitext {
   font-size: 10px;
 }
 
-/* line 302, ../sass/apps/_importer.sass */
+/* line 299, ../sass/apps/_importer.sass */
 .import.summary {
   margin-top: 20px;
 }
-/* line 307, ../sass/apps/_importer.sass */
+/* line 304, ../sass/apps/_importer.sass */
 .import.summary.listing.fixed {
   position: fixed;
   width: 260px;
   top: 120px;
 }
-/* line 312, ../sass/apps/_importer.sass */
+/* line 309, ../sass/apps/_importer.sass */
 .import.summary .item {
   padding: 4px 4px 4px 4px;
   margin: 5px 0 5px 0;
   border-bottom: 1px solid #efefef;
 }
-/* line 320, ../sass/apps/_importer.sass */
+/* line 317, ../sass/apps/_importer.sass */
 .import.summary .item .counters p {
   margin: 0;
 }
-/* line 322, ../sass/apps/_importer.sass */
+/* line 319, ../sass/apps/_importer.sass */
 .import.summary .item .counters dl {
   margin: 6px 0 0 0;
 }
-/* line 324, ../sass/apps/_importer.sass */
+/* line 321, ../sass/apps/_importer.sass */
 .import.summary .item .counters dl dt {
   float: left;
   width: 30px;
   text-align: right;
   padding-right: 4px;
 }
-/* line 330, ../sass/apps/_importer.sass */
+/* line 327, ../sass/apps/_importer.sass */
 .import.summary .item a.toggle {
   color: #333333;
 }
-/* line 332, ../sass/apps/_importer.sass */
+/* line 329, ../sass/apps/_importer.sass */
 .import.summary .item a.toggle:hover {
   text-decoration: none;
 }
-/* line 338, ../sass/apps/_importer.sass */
+/* line 335, ../sass/apps/_importer.sass */
 .import.summary .item.hover.done {
   background-color: #ddffd9;
 }
-/* line 341, ../sass/apps/_importer.sass */
+/* line 338, ../sass/apps/_importer.sass */
 .import.summary .item.hover.duplicate {
   background-color: #fffeac;
 }
-/* line 344, ../sass/apps/_importer.sass */
+/* line 341, ../sass/apps/_importer.sass */
 .import.summary .item.hover.ready {
   background-color: #ddffd9;
 }
 
-/* line 351, ../sass/apps/_importer.sass */
-.popover .popover-content {
-  padding: 8px;
-  background: #333333;
+/* line 346, ../sass/apps/_importer.sass */
+.qtip-importer {
   color: white;
 }
-/* line 355, ../sass/apps/_importer.sass */
-.popover .popover-content img {
+/* line 349, ../sass/apps/_importer.sass */
+.qtip-importer .po-inline {
+  padding: 4px 0;
+}
+/* line 353, ../sass/apps/_importer.sass */
+.qtip-importer img {
   width: 70px;
   height: 70px;
 }
-/* line 358, ../sass/apps/_importer.sass */
-.popover .popover-content h1 {
+/* line 356, ../sass/apps/_importer.sass */
+.qtip-importer h1 {
   line-height: 100%;
   color: white;
   margin-bottom: 8px !important;
 }
-/* line 362, ../sass/apps/_importer.sass */
-.popover .popover-content .alert {
+/* line 361, ../sass/apps/_importer.sass */
+.qtip-importer .alert {
+  margin-top: 10px;
   margin-bottom: 0px;
-  margin-top: 8px;
 }
 
-/* line 366, ../sass/apps/_importer.sass */
+/* line 365, ../sass/apps/_importer.sass */
 span.dim {
   background: transparent;
   color: #a3a3a3;
