--- a/website/site-static/sass/apps/_playlist_editor.sass
+++ b/website/site-static/sass/apps/_playlist_editor.sass
@@ -107,7 +107,8 @@
       &.hover
         background: transparent
         a
-          // border: 5px solid red
+          text-decoration: none
+
         .row-fluid.playhead
           .waveform
             background-color: #ddffd9
