tons of fixes and improvements

--- a/website/apps/alibrary/templates/alibrary/media/__old___list_item_xs.html
+++ b/website/apps/alibrary/templates/alibrary/media/__old___list_item_xs.html
@@ -67,7 +67,7 @@ inline template, used in track display atg release sub-view
     </div>
     <!-- Duration -->
     <div class="list_body_item c5">
-        {{ item.base_duration|sec_to_time }}
+        {{ item.duration_s|sec_to_time }}
     </div>
     <!-- Format / Bitrate -->
     <div class="list_body_item c6">
