--- a/website/apps/alibrary/templates/alibrary/media/__old__list_item_foreign_xs.html
+++ b/website/apps/alibrary/templates/alibrary/media/__old__list_item_foreign_xs.html
@@ -94,7 +94,7 @@
 		</div>
 		<!-- Duration -->
 		<div class="list_body_item c4">
-			{{ item.base_duration|sec_to_time }}
+			{{ item.duration_s|sec_to_time }}
 		</div>
 		<!-- Format / Bitrate -->
 		<div class="list_body_item c5">
