--- a/website/apps/alibrary/templates/alibrary/media/_list_item_foreign_timestamp.html
+++ b/website/apps/alibrary/templates/alibrary/media/_list_item_foreign_timestamp.html
@@ -106,7 +106,7 @@
     <!-- Duration -->
     <div class="list_body_item c4">
         <ul class="unstyled">
-            <li>{{ item.base_duration|sec_to_time }}</li>
+            <li>{{ item.duration_s|sec_to_time }}</li>
             <!--
             <li>{{ item.base_format|upper }} | {{ item.base_filesize|filesizeformat }}</li>
             -->
