--- a/website/apps/alibrary/templates/alibrary/playlist_edit.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_edit.html
@@ -173,8 +173,7 @@
 
                             <h4><i class="icon-lock"></i> {% trans "Playlist editing locked" %}</h4>
                             {% blocktrans %}
-                                This broadcast has already ben sheduled or played. To edit this tracklist you will have
-                                to convert this broadcast to a playlist.
+                                To edit the tracklist you have to revert this playlist from 'broadcast' to 'public'.
                             {% endblocktrans %}
                         </div>
 
