--- a/website/apps/alibrary/templates/alibrary/media/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/media/list_item_s.html
@@ -150,7 +150,7 @@
     <!-- Duration -->
     <div class="list_body_item c4">
         <ul class="unstyled">
-            <li>{{ item.base_duration|sec_to_time }}</li>
+            <li>{{ item.duration_s|sec_to_time }}</li>
             <li>
                 {% if item.conversion_status == 0 %}<i class="icon icon-refresh icon-spin_"></i> {% endif %}
                 {% if item.conversion_status == 2 %}<i class="icon-warning-sign"></i> {% endif %}
