--- a/website/apps/alibrary/templates/alibrary/playlist_detail.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_detail.html
@@ -82,9 +82,11 @@
                     <div class="listview container medias s">
 
                         <div class="list_body">
-                            {% for item in object.items.all %}
+
+                            {% for item in object.sorted_items.all %}
 
                                 {% if item.content_type.model == "media" %}
+
                                     {% with item=item.content_object %}
                                         {% include "alibrary/media/_list_item_foreign_xs.html" %}
                                     {% endwith %}
@@ -98,6 +100,7 @@
 
 
                             {% endfor %}
+
                         </div>
                     </div>
 
