--- a/website/apps/alibrary/templates/alibrary/templatetags/playlists_inline.html
+++ b/website/apps/alibrary/templates/alibrary/templatetags/playlists_inline.html
@@ -12,14 +12,14 @@
 	$(function(){
 
 		alibrary.playlist = new PlaylistUi();
-		alibrary.playlist.api_url = "{% url api_dispatch_list resource_name='playlist' api_name='v1'%}";
-		alibrary.playlist.api_url_simple = "{% url api_dispatch_list resource_name='simpleplaylist' api_name='v1'%}";
+		alibrary.playlist.api_url = "{% url api_dispatch_list resource_name='library/playlist' api_name='v1'%}";
+		alibrary.playlist.api_url_simple = "{% url api_dispatch_list resource_name='library/simpleplaylist' api_name='v1'%}";
 		alibrary.playlist.current_playlist_id = "{{ current_playlist.pk }}";
 		//alibrary.playlist.init();
 		
 
 		alibrary.collector = new CollectorApp;
-		alibrary.collector.api_url = "{% url api_dispatch_list resource_name='playlist' api_name='v1'%}";
+		alibrary.collector.api_url = "{% url api_dispatch_list resource_name='library/playlist' api_name='v1'%}";
 		alibrary.collector.playlist_app = alibrary.playlist;
 		alibrary.collector.init();
 		
